# crypto-exchange-example

./: Cargo.toml  README.md
src/: lib.rs  storage.rs
src/core/: enums.rs  mod.rs
src/core/http/: client.rs  mod.rs  rate_limits.rs
src/init/mexc/: api_client.rs  mod.rs
src/routes/: mod.rs
src/schemas/: assets.rs  mod.rs  networks.rs  orders.rs  users.rs
src/utils/: time.rs  url.rs
src/workers/: mod.rs
