[package]
name = "crypto-exchange-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.99"
serde_json = "1.0"
serde_as = "0.0.1"
uuid ={ version = "1.9.1", features = [ "v4" ]}