[package]
name = "crypto-exchange-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0.3", features = ["tokio"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
serde_json = "1.0.120"
serde_as = "0.0.1"
uuid = { version = "1.9.1", features = [ "v4", "serde" ]}
chrono = "0.4.38"
log = "0.4.22"
http = "1.1.0"
futures = "0.3.30"